src/test/compile-fail/missing-main.rs
// error-pattern:main function not found
fn mian() { }